<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.detail.DetailFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="700dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <ImageView
                android:id="@+id/fon_view"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv"
                android:layout_width="150dp"
                android:layout_height="210dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="14dp"
                app:cardCornerRadius="20dp"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp">

                <ImageView
                    android:id="@+id/art_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/ll_main"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_1999"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anime_name"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

            </LinearLayout>

                <LinearLayout
                    android:id="@+id/mbtn_and_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:layout_gravity="center|end"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_add"
                        android:layout_width="160dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/add_to_library"
                        android:textSize="16sp"
                        app:cornerRadius="10dp" />

                    <ImageView
                        android:id="@+id/iv_three_dont"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/three_dont_menu"/>

                </LinearLayout>

        </FrameLayout>


        <LinearLayout
            android:id="@+id/ll_main_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/sv_text"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/tv_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/p3itugp39ehfjpomsxrdyctfuvgyibuhonijpxrdcytfuvgyibuhonijpmokxrdctfoxrdctfvgybhunjimokesxdrctfvgybhunjimrxdmkl_rxdctfokrdctfvg"
                    android:textSize="20sp" />

            </ScrollView>

            <TextView
                android:id="@+id/tv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/view_more"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/rank_and_score_ll"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/tv_kitsu_score"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/rounder"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:text="@string/kitsy_score"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/eight_nine"
                        android:textSize="30sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_two_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_rank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp">

                        <ImageView
                            android:id="@+id/iv_rank_one"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@color/white_gray" />

                        <TextView
                            android:id="@+id/tv_rank_two"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/rank_30"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_rank_three"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/rating"
                            android:textColor="@color/white_gray"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_rank_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp">

                        <ImageView
                            android:id="@+id/iv_rank2"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@color/white_gray" />

                        <TextView
                            android:id="@+id/tv_ranks"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/rank_30"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_rankis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/rating"
                            android:textColor="@color/white_gray"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/gray"
                    android:text="@string/pirate"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_two"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/pirate"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_three"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/pirate"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_four"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/pink"
                    android:text="@string/pirate"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>